fixed menu spacing with FireFox

--- a/src/app/dde-menu/dde-menu.component.css
+++ b/src/app/dde-menu/dde-menu.component.css
@@ -32,4 +32,5 @@
   padding-left: 0;
   padding-right: 0;
   letter-spacing: inherit;
+  white-space: normal;
 }
